0029766: BRepExtrema_DistShapeShape Should Give Access to Its Solutions

Solution getters have been added to BRepExtrema_DistShapeShape.